[package]
name = "rust-recon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dirs = "6.0"
clap = { version = "4.6.1", features = ["derive"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full", "extra-traits", "visit"] }
toml = "1.1.2"
